env files change

--- a/.env.mockserver
+++ b/.env.mockserver
@@ -1,16 +1,44 @@
-REACT_APP_BASE_API_URL=http://localhost:8080/api/
+REACT_APP_BASE_API_URL=
 REACT_APP_ENV=mockserver
-REACT_APP_CASELOAD_METRICS=resea/dashboard/caseloadMetrics
-REACT_APP_CASELOAD_SUMMARY=resea/dashboard/caseload-summary
-REACT_APP_CASELOAD=resea/dashboard/caseloadTable
-REACT_APP_CALENDAR_DETAILS=resea/dashboard/calendarDetails
-REACT_APP_CASE_HEADER=resea/calEvent/caseHeader
+REACT_APP_CASELOAD_METRICS=./mockData/caseloadMetrics.json
+REACT_APP_CASELOAD_SUMMARY=./mockData/caseloadSummary.json
+REACT_APP_CASELOAD=./mockData/caseloadTable.json
+REACT_APP_CALENDAR_DETAILS=./mockData/calendarDetails.json
+REACT_APP_CASE_HEADER=./mockData/caseHeader.json
 REACT_APP_ADDITIONAL_DETAILS=./mockData/additionalDetailsForm.json
 REACT_APP_RETURNED_TO_WORK_SAVE=./mockData/returnedToWorkSave.json
-REACT_APP_APPOINTMENT_DETAILS_SUBMISSION=appointment/
-REACT_APP_APPOINTMENT_DETAILS_GET=resea/interview/details
+# REACT_APP_APPOINTMENT_DETAILS_SUBMISSION=appointment/
+REACT_APP_APPOINTMENT_DETAILS_GET=./mockData/interviewDetails.json
 
-REACT_APP_NMI_LIST=resea/nmi/list/
+REACT_APP_NMI_LIST=./mockData/issueTypes.json
+REACT_APP_SUB_NMI_LIST=./mockData/subIssueTypes.json
 
 REACT_APP_VALIDATE_JWT=./mockData/validateJWT.json
 REACT_APP_FOOTER_URL=./mockData/footer.json
+REACT_APP_APPOINTMENT_STAFF_LIST=./mockData/appointmentStaffList.json
+REACT_APP_RETURN_TO_WORK_GET=./mockData/appointmentRtwView.json
+
+
+REACT_APP_APPOINTMENTS_LOCAL_OFFICE=./mockData/lookUpOffices.json
+REACT_APP_APPOINTMENTS_CASE_MANAGER=./mockData/caseManager.json
+REACT_APP_APPOINTMENTS_SCHEDULED_BY=./mockData/scheduledBy.json
+REACT_APP_APPOINTMENTS_TIME_SLOT_TYPE=./mockData/timeslotType.json
+REACT_APP_APPOINTMENTS_TIME_USAGE=./mockData/timeUsage.json
+REACT_APP_APPOINTMENTS_MEETING_STATUS=./mockData/meetingStatus.json
+
+
+REACT_APP_CASE_STATUS=./mockData/caseStatus.json
+REACT_APP_CASE_STAGE=./mockData/caseStage.json
+REACT_APP_CASE_TERMINATION_REASON=./mockData/caseTerminationReason.json
+
+
+REACT_APP_CASE_KPI_SUMMARY=./mockData/kpiSummary.json
+
+REACT_APP_CASE_SCHEDULE_LOCAL_OFFICE=./mockData/localOffice.json
+REACT_APP_CASE_SCHEDULE_CASE_MANAGER_AVL_LIST=./mockData/getCaseMgrAvailList.json
+REACT_APP_CASE_EMPLOYER_SEARCH=./mockData/employeeDetails.json
+
+
+
+REACT_APP_CASE_STAFF_UNAVAILABILITY=./mockData/staffUnavailaability.json
+
